<resources>
    <string name="app_name">Map Google API App</string>
    <string name="btn_set_current_location">Detect current location</string>
    <string name="btn_show_on_map">Shown on map</string>
    <string name="btn_find_address">Find address</string>
    <string name="btn_find_cafe_near">Find cafe near</string>
    <string name="btn_add_marker">Add marker</string>
    <string name="btn_show">Show</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_delete_marker">Delete</string>
    <string name="hint_location">Current location is:</string>
    <string name="hint_marker_name">Enter marker name</string>
    <string name="hint_marker_description">Enter marker description</string>
    <string name="hint_markers_list">List of all saved markers:</string>
    <string name="error_no_location_set">Current location is not set.</string>
    <string name="error_no_service_found">Google maps or other maps software not found on device.</string>
    <string name="error_not_all_permissions_granted">Please provide all required permissions for correct work</string>
    <string name="error_marker_name_is_empty">Name must contain symbols!</string>
    <string name="error_marker_no_markers_to_display">You don\'t have any markers to display.</string>
    <string name="dialog_enter_address">Please enter address for showing on map:</string>
    <string name="google_maps_api_key">AIzaSyClzkhmGH8Nc1o3lur1qd4GIe17K_2c_U4</string>
    <string name="no_data">No data</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="address">Address</string>
    <string name="check_view_inside">View inside app</string>
    <string name="side_menu_profile_1">Markers</string>
    <string name="side_menu_profile_2">Map display mode</string>
    <string name="side_menu_profile_3">Search address</string>
    <string name="mnu_markers_view_on_map">Show markers on map</string>
    <string name="mnu_markers_turn_off_on_map">Hide markers on map</string>
    <string name="mnu_markers_view_list">View all markers</string>
    <string name="mnu_markers_delete_all">Delete all markers</string>
    <string name="mnu_mapmode_normal">Normal</string>
    <string name="mnu_mapmode_satellite">Satellite</string>
    <string name="mnu_mapmode_tarrain">Terrain</string>
    <string name="mnu_mapmode_hybrid">Hybrid</string>
    <string name="mnu_markers_delete">Delete</string>
    <string name="markerTitle">Marker title:</string>
    <string name="delete_marker_title">Delete?</string>
    <string name="delete_marker_message">Delete this marker?</string>
</resources>
