<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kartsev.dmitry.ru.mapgoogleapiapp.MainActivity">

    <Button
        android:text="@string/btn_find_cafe_near"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnFindCafeNear"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn_find_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnFindAddress"
        android:layout_above="@+id/btnFindCafeNear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn_show_on_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnShowOnMap"
        android:layout_above="@+id/btnFindAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_mylocation"
        android:id="@+id/ibtnSetCurrentLocation"
        android:layout_above="@+id/btnShowOnMap"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/btn_set_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/ibtnSetCurrentLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textLocation"
        android:textSize="18sp"
        android:minLines="3"
        android:background="@color/locationBackground"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/hint_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:id="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/check_view_inside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/checkViewMapInside"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
